fixed styling on build elements to overlap, edited onclick to toggle off highlight if a name is clicked

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,27 +75,78 @@ input:hover, input:focus {
   
 }
 
-.case, .keycap, .switch, .build {
+.case, .keycap, .switch {
   background-image: var(--my-image);
   background-size: cover;
   background-position: center;
   border: 1px solid black;
   border-radius: 50px;
-  height: 250px;
-  width: 200px;
+  height: 220px;
+  width: 220px;
   padding: 20px;
 }
 
-.build-card, .case-card, .keycap-card, .switch-card {
+.case-card, .keycap-card, .switch-card {
   font-size: 80%;
   text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
   0px 8px 13px rgba(0,0,0,0.1),
   0px 18px 23px rgba(0,0,0,0.1);
+  border-radius: 50px;
   margin: auto;
+}
+
+.build {
+  background-image: var(--my-image);
+  background-size: cover;
+  background-position: center;
+  border: 1px solid black;
+  border-radius: 50px;
+  height: 220px;
+  width: 220px;
+  padding: 20px;
+  position: relative;
+}
+
+
+.build-card {
+  font-size: 80%;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+  0px 8px 13px rgba(0,0,0,0.1),
+  0px 18px 23px rgba(0,0,0,0.1);
+  border-radius: 50px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50px;
+  height: 100%;
+  width: 100%;
+  z-index: 9;
+
+}
+
+.info {
+  opacity:0;
+}
+
+.info:hover {
+  opacity:1;
+  -webkit-transition: opacity .25s ease-in-out .0s;
+  transition: opacity .25s ease-in-out .0s;
 }
 
 a {
   text-decoration: none;
+}
+
+.id-button {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: pink;
+}
+
+.id-button:hover {
+  box-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1)
 }
 
 
@@ -106,6 +157,8 @@ a {
     rgba(0, 0, 0, 0.75)
   ),
   var(--hover-image);
+  background-size: cover;
+  box-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1)
 }
 
 
@@ -143,6 +196,7 @@ a {
 }
 
 .item-name:hover {
+  color: lightblue;
   text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1)
 }
 
